--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-rainbow-components": "^1.28.0",
