--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-accessible-accordion": "^4.0.0",
+    "react-cookie-consent": "^7.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-rainbow-components": "^1.28.0",
