--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-accessible-accordion": "^4.0.0",
     "react-cookie-consent": "^7.3.0",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-rainbow-components": "^1.28.0",
